stretched even more with a fixed nav with opacity

--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,23 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.fixed-nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.fixed-nav:before {
+  content: "";
+  background: url(image.jpg);
+  opacity: 0.5;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+  background-color: #F6F6F6;
+}
 .nav {
   padding: 2%;
   display: flex;
@@ -207,6 +224,7 @@ footer {
   justify-content: center;
 }
 .block img {
+  margin-top: 22%;
   border-radius: 5px;
 }
 .block .title {
